<resources>
    <string name="app_name">Calculator</string>
    <string name="title_activity_main">Calculator</string>

    <string name="clear">Clear</string>
    <string name="backspace">Del</string>
    <string name="help">\?</string>
    <string name="negative">Neg.</string>

    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="subtract">―</string> <!-- This char is a long dash, not a -, to avoid conflicts with negative symbol -->
    <string name="add">+</string>
    <string name="equals">=</string>

    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>

    <string name="decimal">.</string>
    <string name="startingText">0</string>
</resources>